# 212_UR5

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  bimanual_test.py  docker-compose.yml  example_load.py  microwave_open_close.py  requirements-macos.txt  run.py  setup.py  ur5_test.py
.claude/agent-memory/pydrake-expert/: MEMORY.md  context_wiring.md  joint_mapping.md  planning_stack.md
calibration/: CMakeLists.txt  README.md  calibrate_camera.cpp
control_scripts/: README.md  __init__.py  arm.py  calibration.py  config.py  lab_landmarks.py  manual.py  microwave.py  pick.py  place.py  reachability.py  runtime.py  session.py  test_import.py  world.py
control_scripts/examples/: calibrate_camera.py  close_microwave.py  diagnose_ik_fk.py  open_microwave.py  pick_bottle.py  pick_place_plate.py  record_waypoints.py  record_waypoints_standing.py  sandbox.py  verify_calibration.py
control_scripts/grasps/: Untitled  __init__.py  _hook_rim.py  base.py  bottle.py  bowl.py  cup.py  plate.py
control_scripts/grippers/: __init__.py  base.py  hook_gripper.py  robotiq_2f85.py
control_scripts/moves/: __init__.py  approach_to.py  lift_to_transit.py  move_until_contact.py  retract_to.py  transit_xy.py
control_scripts/planning/: __init__.py  _test_planner.py  build_scene.py  dryrun_open_microwave.py  dryrun_pick_bowl.py  dryrun_pick_plate.py  execute.py  ikfast.py  preview.py  rrt.py  smoke_transit.py  sweep_cup_grasp_angle.py  transit.py  verify_ik_recorded.py  verify_ikfast.py  verify_ikfast_real.py  verify_objects.py  verify_open_microwave_chain.py  verify_rrt.py  verify_rrt_ikfast.py  visualize.py  visualize_cup_grasp_angle.py  visualize_cup_microwave_place.py  visualize_ik_branches.py  visualize_open_microwave_chain.py  visualize_waypoints.py  warmstart.py  warmstart_cache.pkl
control_scripts/planning/scene/: __init__.py  arms.py  grippers.py  microwave.py  objects.py  tables.py  vention.py
control_scripts/routines/: __init__.py
control_scripts/tasks/: __init__.py  _pick_place_cup_core.py  close_microwave.py  go_home.py  microwave_place.py  open_microwave.py  pick_place_bowl_hook.py  pick_place_bowl_hook_microwave.py  pick_place_cup.py  pick_place_cup_hook_microwave.py  pick_place_cup_microwave.py  pick_place_cup_tray.py  pick_place_plate.py  pick_place_plate_microwave.py  pour_bottle.py  pour_bottle_hook.py  press_button.py
control_scripts/tasks/close_microwave/: __main__.py  close_microwave.py
control_scripts/tasks/close_microwave_full/: __init__.py  __main__.py  close_microwave.py
control_scripts/tasks/hook_grasp_from_vision/: CMakeLists.txt  __init__.py  __main__.py  perception_hook_testing.cpp
control_scripts/tasks/microwave_place/: __init__.py  microwave_place.py
control_scripts/tasks/open_microwave/: __init__.py  __main__.py  open_microwave.py
control_scripts/tasks/pick_place_bowl_hook/: pick_place_bowl_hook.py
control_scripts/tasks/pick_place_bowl_hook_full/: CMakeLists.txt  __init__.py  __main__.py  perception.cpp  pick_place_bowl_hook.py
control_scripts/tasks/pick_place_bowl_hook_microwave/: __init__.py  __main__.py  pick_place_bowl_hook_microwave.py
control_scripts/tasks/pick_place_bowl_hook_microwave_full/: __main__.py  pick_place_bowl_hook_microwave.py
control_scripts/tasks/pick_place_cup/: CMakeLists.txt  __main__.py  perception.cpp  pick_place_cup.py
control_scripts/tasks/pick_place_cup_full/: CMakeLists.txt  __init__.py  __main__.py  perception.cpp  pick_place_cup.py
control_scripts/tasks/pick_place_plate/: CMakeLists.txt  __init__.py  perception.cpp  pick_place_plate.py
control_scripts/tasks/pick_place_plate_full/: __main__.py  perception.cpp
control_scripts/tasks/pour_bottle_full/: CMakeLists.txt  __init__.py  __main__.py  perception.cpp
control_scripts/trials/: README.md  __init__.py  definitions.py  models.py  runner.py
control_scripts/util/: __init__.py  fk_replay.py  frames.py  poses.py  rotations.py  rtde_convert.py  se3_average.py  tray_layout.py
docker/: Dockerfile  run_sim.sh  start_vnc.sh
logs/waypoints/: standing_20260506_141856.json  standing_20260506_144514.json  standing_20260506_145338.json  standing_20260506_145613.json  ur_left_20260430_211808.json  ur_left_20260430_214535.json  ur_left_20260501_005726.json  ur_left_20260501_192746.json  ur_left_20260503_175927.json  ur_left_20260503_182923.json  ur_left_20260503_202336.json  ur_left_20260503_202925.json  ur_left_20260503_213811.json  ur_left_20260503_232859.json  ur_left_20260505_005834.json  ur_left_20260505_010751.json  ur_left_20260505_011254.json  ur_left_20260506_025716.json  ur_left_20260506_125147.json  ur_left_open_microwave_1.json  ur_right_20260426_202727.json  ur_right_20260430_222744.json  ur_right_20260430_222945.json  ur_right_20260430_223037.json  ur_right_20260506_125049.json
ros_ws/devel/: .catkin
ros_ws/src/dual_ur5_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/dual_ur5_gazebo/config/: scene.yaml
ros_ws/src/dual_ur5_gazebo/launch/: sim.launch
ros_ws/src/dual_ur5_gazebo/models/bowl/: model.config  model.sdf
ros_ws/src/dual_ur5_gazebo/models/cup/: model.config  model.sdf
ros_ws/src/dual_ur5_gazebo/models/microwave/: model.config  model.sdf
ros_ws/src/dual_ur5_gazebo/models/table/: model.config  model.sdf
ros_ws/src/dual_ur5_gazebo/worlds/: base.world
sam2_hiera_tiny/: config.yaml  onnxruntime_cpp_hint.txt  run_sam2_box_onnx.py
scenario_files/: bimanual.yaml  microwave_scenario.yaml
src/: scene.py  segments.py  task_sequencer.py
src/execution/: README.md  __init__.py  backend.py  real_backend.py  sim_backend.py  sim_controllers.py
src/grasping/: README.md  __init__.py  candidates.py
src/grippers/: README.md  __init__.py  base.py  hook_gripper.py  robotiq_2f85.py
src/planners/: README.md  __init__.py  base.py  diff_ik.py  ik.py  rrt_connect.py  trajopt.py  warmstart.py
src/primitives/: README.md  __init__.py  base.py  drag.py  open_microwave.py  pick.py  place.py  pour.py  press_button.py  push.py  stir.py
ur_description/urdf/: ur5e_left.urdf  ur5e_right.urdf
utils/: mesh_from_model.py
(+50 files in other folders)
